--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,7 +7,8 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.1'
+        classpath 'com.android.tools.build:gradle:7.3.0'
+//        classpath 'com.android.tools.build:gradle:3.5.1'
     }
 }
 rootProject.allprojects {
@@ -18,7 +19,7 @@ rootProject.allprojects {
 }
 apply plugin: 'com.android.library'
 android {
-    compileSdkVersion 30
+    compileSdkVersion 33
 
     defaultConfig {
         minSdkVersion 18
