--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -26,16 +26,17 @@
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
          In most cases you can leave this as-is, but you if you want to provide
-         additional functionality it is fine to subclass or reimplement
+         additional functionality it is fine to subclass or reimplement                             android:launchMode="singleTop"
          FlutterApplication and put your custom class here. -->
+    <!--android:allowBackup="true" in beacon activity android:launchMode="singleTop"-->
     <application
+        android:allowBackup="true"
         android:name="${applicationName}"
         android:label="Flutter Beacon"
         android:icon="@mipmap/ic_launcher"
         >
         <activity
             android:name=".MainActivity"
-            android:launchMode="singleTop"
             android:theme="@style/LaunchTheme"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
             android:hardwareAccelerated="true"
@@ -60,6 +61,7 @@
               />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
